controlador de formulario de ingresos funcionando, levantando los datos del Dom con un script y enviandolos al mainController.entryForm

--- a/views/entryForm.ejs
+++ b/views/entryForm.ejs
@@ -25,18 +25,18 @@
                     <div class="entryForm_title">
                         <p>Nuevo Ingreso</p>
                     </div>
-                    <form action="/entry"  method="POST"  class="" id="form">
+                    <form action=""  method=""  class="" id="form">
                         <div class="entryForm_container">
                             
                                 <label for="date">Fecha </label>
-                                <input type="date" name="date">
+                                <input type="date" name="date" id="date">
                             
                             
                                 <label for="category">Categoria</label>
-                                <input type="text"  name="category">
+                                <input type="text"  name="category" id="category">
                             
                                 <label for="amount">Monto</label>
-                                <input type="text" name="amount" >
+                                <input type="text" name="amount" id="amount" >
                                 <button type="submit" class="entryForm_btn" id ="btn">Aceptar</button>
                         </div>
 
