--- a/views/index2.ejs
+++ b/views/index2.ejs
@@ -77,7 +77,7 @@
                 </div>
                 <a type="button" class="see-more_btn" >Ver mas >></a>
                 <!-- buttons -->
-                <a type="button" class="entry_btn" href="/entry">Nuevo Ingreso</a>
+             <!--    <a type="button" class="entry_btn" href="/entry">Nuevo Ingreso</a> -->
                 <a type="button" class="withdrawal_btn" href="/withdrawal" >Nuevo Gasto</a>
                 </div>
         </div>
