--- a/views/index.ejs
+++ b/views/index.ejs
@@ -23,7 +23,7 @@
                 </div>
                 <div class="main_saldo">
                     <p>SALDO ACTUAL</p>
-                    <p>$3500</p>
+                    <p id="total">$3500</p>
                 </div>
                 <div>
                     <p>Ultimos movimientos</p>
