--- a/views/entryForm.ejs
+++ b/views/entryForm.ejs
@@ -15,7 +15,7 @@
 
    <BODY>
  
-        <div class="main">
+        <div class="main_form">
             <div class="main_container">
 
                 <div class="main_header">
@@ -25,9 +25,9 @@
                     <div class="entryForm_title">
                         <p>Nuevo Ingreso</p>
                     </div>
-                    <form action=""  method=""  class="" id="form">
+                    <form action="/entry"  method="POST"  class="" id="form">
                         <div class="entryForm_container">
-                            
+                                
                                 <label for="date">Fecha </label>
                                 <input type="date" name="date" id="date">
                             
@@ -44,6 +44,6 @@
                 </div>
               
         </div>
-    <script src="/js/entryFormScript.js"></script>
+<!--     <script src="/js/entryFormScript.js"></script> -->
    </BODY>
 </HTML>
