--- a/views/index.ejs
+++ b/views/index.ejs
@@ -4,11 +4,13 @@
  
     <link rel="stylesheet" href="/css/styles.css">
     <link rel="stylesheet" href="/css/normalize.css">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">
+
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Raleway&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+    <script src="https://kit.fontawesome.com/ac84a17cfe.js" crossorigin="anonymous"></script>
+
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Mi billetera</title>
    </HEAD>
@@ -16,7 +18,7 @@
    <BODY>
  
         <div class="main">
-            <div class="main_container">
+            <div class="main_container-index ">
 
                 <div class="main_header">
                     <p>MI BILLETERA</p>            
@@ -27,6 +29,7 @@
                 </div>
                 <div>
                     <p>Ultimos movimientos</p>
+                    <br>
                 </div>
                 <!-- item list -->
                 <section class=" " id="balance"> </section>
@@ -37,7 +40,7 @@
                                 <p id="category">Comida</p>
                                 <p id="amount">$1500</p>
                             </div>
-                            <a type="button" class="edit_btn" ></a>
+                            <a type="button" class="edit_btn" id="edit-btn"><i class="fa-regular fa-pen-to-square"></i></a>
                     </div>                   
                 </template>
                 <a type="button" class="see-more_btn" >Ver mas >></a>
