--- a/views/withdrawalForm.ejs
+++ b/views/withdrawalForm.ejs
@@ -15,7 +15,7 @@
 
    <BODY>
  
-        <div class="main">
+        <div class="main_form">
             <div class="main_container">
 
                 <div class="main_header">
@@ -25,19 +25,19 @@
                     <div class="withdrawalForm_title">
                         <p>Nuevo egreso</p>
                     </div>
-                    <form action="/entry"  method="POST" enctype="multipart/form-data" class="" id="form">
+                    <form action="/withdrawal"  method="POST"  class="" id="form">
                         <div class="entryForm_container">
+                                
+                                <label for="date">Fecha </label>
+                                <input type="date" name="date" id="date">
                             
-                                <label for="fecha">Fecha </label>
-                                <input type="date" name="fecha">
                             
+                                <label for="category">Categoria</label>
+                                <input type="text"  name="category" id="category">
                             
-                                <label for="categoria">Categoria</label>
-                                <input type="text"  name="categoria">
-                            
-                                <label for="monto">Monto</label>
-                                <input type="text" name="monto">
-                                <button type="submit" class="entryForm_btn">Aceptar</button>
+                                <label for="amount">Monto</label>
+                                <input type="text" name="amount" id="amount" >
+                                <button type="submit" class="entryForm_btn" id ="btn">Aceptar</button>
                         </div>
 
                     </form>
