--- a/views/index.ejs
+++ b/views/index.ejs
@@ -29,6 +29,12 @@
                 </div>
                 <div>
                     <p>Ultimos movimientos</p>
+                    <div class="index-btn">
+                        <button id ="all">Todos</button>
+                        <button id ="entry">Ingreso</button>
+                        <button id = "withdrawal">Egreso</button>
+
+                    </div>
                     <br>
                 </div>
                 <!-- item list -->
