--- a/views/editForm.ejs
+++ b/views/editForm.ejs
@@ -24,7 +24,7 @@
                     </div>
                     <div class="entryForm_mainContainer">
                         <div class="entryForm_title">
-                            <p>Editar Ingreso</p>
+                            <p>Editar campo</p>
                         </div>
                         <form action=""  method=""  class="" id="form">
                             <div class="entryForm_container">
@@ -49,8 +49,8 @@
                                 <!--     <div class="entryForm_btn "> -->
     
                                         <button type="submit" class="editForm-btn-order-delete " id ="delete-btn">Eliminar</button>
-                                        <button type="submit" class="editForm-btn-order-delete" id ="edit-btn">Aceptar</button>
-                                        <a type="button" class="see-more_btn" > &lt;&lt;Volver</a>
+                                        <button type="submit" class="editForm-btn-order-delete" id ="update-btn">Actualizar</button>
+                                        <a type="button" href ="/"class="see-more_btn" > &lt;&lt;Volver</a>
                                <!--      </div> -->
             
                                     <p class="color-lines"></p>
@@ -63,6 +63,6 @@
         </div>
               
         </div>
-    <script src="/js/entryFormScript.js"></script>
+    <script src="/js/editFormScript.js"></script>
    </BODY>
 </HTML>
