--- a/views/entryForm.ejs
+++ b/views/entryForm.ejs
@@ -39,11 +39,12 @@
                                 <input type="text" name="amount" id="amount" >
                                 <button type="submit" class="entryForm_btn" id ="btn">Aceptar</button>
                         </div>
+                        <a type="button" href ="/"class="see-more_btn" > &lt;&lt;Volver</a>
 
                     </form>
                 </div>
               
         </div>
-<!--     <script src="/js/entryFormScript.js"></script> -->
+
    </BODY>
 </HTML>
