--- a/views/withdrawalForm.ejs
+++ b/views/withdrawalForm.ejs
@@ -39,7 +39,7 @@
                                 <input type="text" name="amount" id="amount" >
                                 <button type="submit" class="entryForm_btn" id ="btn">Aceptar</button>
                         </div>
-
+                        <a type="button" href ="/"class="see-more_btn" > &lt;&lt;Volver</a>
                     </form>
                 </div>
               
