--- a/views/editForm.ejs
+++ b/views/editForm.ejs
@@ -9,6 +9,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Raleway&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+    <script src="https://kit.fontawesome.com/ac84a17cfe.js" crossorigin="anonymous"></script>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Mi billetera</title>
    </HEAD>
@@ -20,7 +21,9 @@
                 <div class="main_container">
     
                     <div class="main_header">
-                        <p>MI BILLETERA</p>            
+                        <i class="fa-solid fa-bars"></i>
+                        <p>MI BILLETERA</p> 
+                        <i class="fa-solid fa-power-off"></i>          
                     </div>
                     <div class="entryForm_mainContainer">
                         <div class="entryForm_title">
