--- a/views/entryForm.ejs
+++ b/views/entryForm.ejs
@@ -9,6 +9,9 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Raleway&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+    <script src="https://kit.fontawesome.com/ac84a17cfe.js" crossorigin="anonymous"></script>
+<!--     <script src="//cdn.jsdelivr.net/npm/sweetalert2@11"></script> -->
+
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Mi billetera</title>
    </HEAD>
@@ -19,7 +22,9 @@
             <div class="main_container">
 
                 <div class="main_header">
-                    <p>MI BILLETERA</p>            
+                    <i class="fa-solid fa-bars"></i>
+                    <p>MI BILLETERA</p> 
+                    <i class="fa-solid fa-power-off"></i>             
                 </div>
                 <div class="entryForm_mainContainer">
                     <div class="entryForm_title">
@@ -29,15 +34,25 @@
                         <div class="entryForm_container">
                                 
                                 <label for="date">Fecha </label>
-                                <input type="date" name="date" id="date">
+                                <div>
+                                    <input type="date" name="date" id="date" required  >
+                                    <span></span>
+                                </div>
                             
-                            
+                                
                                 <label for="category">Categoria</label>
-                                <input type="text"  name="category" id="category">
+                                <div>
+                                    <input type="text"  name="category" id="category" required >
+                                    <span></span>
+                                </div>
                             
                                 <label for="amount">Monto</label>
-                                <input type="text" name="amount" id="amount" >
-                                <button type="submit" class="entryForm_btn" id ="btn">Aceptar</button>
+                                <div  >
+
+                                    <input  name="amount" id="amount"   >
+                                    <span></span>
+                                </div>
+                                <button type="submit" class="editForm-btn-order-delete " id ="btn" >Aceptar</button>
                         </div>
                         <a type="button" href ="/"class="see-more_btn" > &lt;&lt;Volver</a>
 
@@ -45,6 +60,6 @@
                 </div>
               
         </div>
-
+        <script src="/js/validations.js"></script>
    </BODY>
 </HTML>
