--- a/views/withdrawalForm.ejs
+++ b/views/withdrawalForm.ejs
@@ -9,6 +9,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Raleway&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+    <script src="https://kit.fontawesome.com/ac84a17cfe.js" crossorigin="anonymous"></script>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Mi billetera</title>
    </HEAD>
@@ -19,11 +20,13 @@
             <div class="main_container">
 
                 <div class="main_header">
-                    <p>MI BILLETERA</p>            
+                    <i class="fa-solid fa-bars"></i>
+                    <p>MI BILLETERA</p> 
+                    <i class="fa-solid fa-power-off"></i>      
                 </div>
                 <div class="entryForm_mainContainer">
-                    <div class="withdrawalForm_title">
-                        <p>Nuevo egreso</p>
+                    <div class="entryForm_title">
+                        <p>Nuevo Gasto</p>
                     </div>
                     <form action="/withdrawal"  method="POST"  class="" id="form">
                         <div class="entryForm_container">
@@ -37,10 +40,10 @@
                             
                                 <label for="amount">Monto</label>
                                 <input type="text" name="amount" id="amount" >
-                                <button type="submit" class="entryForm_btn" id ="btn">Aceptar</button>
+                                <button type="submit" class="editForm-btn-order-delete" id ="btn">Aceptar</button>
                         </div>
-                        <a type="button" href ="/"class="see-more_btn" > &lt;&lt;Volver</a>
                     </form>
+                    <a type="button" href ="/"class="see-more_btn" > &lt;&lt;Volver</a>
                 </div>
               
         </div>
